<resources>
    <!-- App -->
    <string name="app_name">KiwiBoard</string>

    <string name="kiwi_logo">Logo</string>

    <!-- Navigation Drawer Strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="professor_report">Professor Report</string>
    <string name="choose_class">Choose Class</string>
    <string name="create_class">Create Class</string>
    <string name="question_log">Question Log</string>
    <string name="roster">Roster</string>
    <string name="manage_app">Manage App</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="grades">Grades</string>
    <string name="add_class">Add Class</string>

    <!-- Login Process -->
    <string name="student_registration_slogan">Welcome to KiwiBoard!</string>
    <string name="text_name_hint">Name</string>
    <string name="text_email_address_hint">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_register">Register</string>
    <string name="text_login_prompt">Already have an account?</string>
    <string name="text_prof_login_prompt">Click here to register as a professor</string>
    <string name="text_student_login_prompt">Click here to register as a student</string>

    <!-- Home -->
    <string name="active_questions">Active Questions</string>
    <string name="recent_questions">Recent Questions</string>
    <string name="queue">Queue</string>

    <!-- Choose Course Page -->
    <string name="choose_your_course">Choose your course</string>

    <!-- Multiple Choice Page -->
    <string name="title_activity_multiplechoice">multiplechoice</string>

    <string name="empty_mc1">Choice A</string>
    <string name="empty_mc2">Choice B</string>
    <string name="empty_mc3">Choice C</string>
    <string name="empty_mc4">Choice D</string>

    <string name="prof_multchoice_questionbox">Enter the question:</string>
    <string name="prof_multchoice_questionLabel">Enter question #:</string>
    <string name="prof_settimer_label">01:00</string>

    <string name="select_multiple_answers">Select all that apply?</string>
    <string name="multchoice_total_points">Enter total</string>

    <string name="question_box_label">Question</string>
    <string name="question_number_label">Q#:</string>
    <string name="question_log_label">Question Log</string>

    <string name="points_label">Points</string>
    <string name="timer_label">Timer</string>

    <string name="questionlog_label1">Q1</string>
    <string name="samplequestion1">How old is Earth?</string>

    <string name="questionlog_label2">Q2</string>
    <string name="samplequestion2">How many presidents have been murdered?</string>

    <string name="questionlog_label3">Q3</string>
    <string name="samplequestion3">Can kiwis hit the dougie?</string>

    <string name="questionlog_label4">Q4</string>
    <string name="samplequestion4">Can Max shave his beard?</string>

    <string name="questionlog_label5">Q5</string>
    <string name="samplequestion5">Who is the priest?</string>

    <string name="questionlog_label6">Q6</string>
    <string name="samplequestion6">What is 2+2*2?</string>

    <string name="questionlog_label7">Q7</string>
    <string name="samplequestion7">How hungry am I?</string>

    <string name="submit_label">Submit</string>

    <string name="submit_button">Submit</string>
    <string name="questionbox_template">Who da best?</string>
    <string name="choice_A_label">Max Stalk</string>
    <string name="choice_B_label">Brandon Clarke</string>
    <string name="choice_C_label">Zach Congi</string>
    <string name="choice_D_label">Jewan Jeffries</string>
    <string name="choice_E_label">Edvin Liang</string>
    <string name="question_label">#1</string>
    <string name="create_a_question">Create a question</string>
    <string name="prof_answer_label">Answer</string>
    <string name="prof_SA_answer_questionbox">Enter the answer:</string>


    <string name="prof_showAnswer">Show Answer</string>



</resources>
