<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionLog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="67dp"
        android:layout_height="63dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:src="?attr/homeAsUpIndicator"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toStartOf="@+id/question_log_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question_log_label"
        android:layout_width="343dp"
        android:layout_height="63dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="14dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        android:text="@string/question_log_label"
        android:textColor="@color/White"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/backArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backArrow" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:background="@color/multChoiceBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_log_label">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q1label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/questionlog_label1"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q1description"
                android:layout_width="355dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/samplequestion1"
                android:textColor="@color/White"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q2label"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/questionlog_label2"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q2description"
                android:layout_width="356dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/samplequestion2"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q3label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/questionlog_label3"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q3description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/samplequestion3"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q4label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/questionlog_label4"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q4description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/samplequestion4"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q6label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/questionlog_label6"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q6description"
                android:layout_width="353dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/samplequestion6"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/q7label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/questionlog_label7"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q7description"
                android:layout_width="353dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/samplequestion7"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>