<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".ProfMultipleChoice">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profMultChoice_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_secondary_variant"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="141dp"
        android:layout_height="103dp"
        android:contentDescription="@string/kiwi_logo"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout18"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout18"
        app:layout_constraintTop_toTopOf="@+id/linearLayout18"
        app:srcCompat="@drawable/kiwi_rectangular" />

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/appLogo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp">

        <TextView
            android:id="@+id/questionNumberLabel"
            android:layout_width="88dp"
            android:layout_height="35dp"
            android:background="@color/themeColor"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingEnd="0dp"
            android:text="@string/question_number_label"
            android:textColor="@color/White"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/enterQuestionText"
            android:layout_width="90dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:background="@color/White"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/prof_multchoice_questionLabel"
            android:textColor="@color/hintGray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/appLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="@+id/appLogo">

        <TextView
            android:id="@+id/timerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/timer_label"
            android:textColor="@color/White"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profSetTimerText"
            android:layout_width="107dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:background="@color/White"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/prof_settimer_label"
            android:textColor="@color/hintGray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/multipleChoiceOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo">

        <TextView
            android:id="@+id/profQuestionBoxLabel"
            android:layout_width="88dp"
            android:layout_height="35dp"
            android:background="@color/themeColor"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/question_box_label"
            android:textColor="@color/White"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profQuestionInputBox"
            android:layout_width="match_parent"
            android:layout_height="178dp"
            android:background="@color/White"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/prof_multchoice_questionbox"
            android:textColor="@color/hintGray"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalPointsLabel"
                android:layout_width="61dp"
                android:layout_height="37dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:text="@string/points_label"
                android:textColor="@color/White"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalPoints"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@color/White"
                android:text="@string/multchoice_total_points"
                android:textColor="@color/hintGray" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="185dp"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/select_multiple_answers"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/multipleChoiceOptions"
        android:layout_width="392dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toTopOf="@+id/profSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20">

        <RadioButton
            android:id="@+id/emptymc1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#03A9F4"
            android:fontFamily="sans-serif-black"
            android:text="@string/empty_mc1"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/emptymc2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-black"
            android:text="@string/empty_mc2"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/emptymc3"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-black"
            android:text="@string/empty_mc3"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/emptymc4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-black"
            android:text="@string/empty_mc4"
            android:textColor="@color/White"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/profSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:text="@string/submit_label"
        android:textColor="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/multipleChoiceOptions"
        app:layout_constraintTop_toBottomOf="@+id/multipleChoiceOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>